[gd_scene load_steps=8 format=2]

[ext_resource path="res://plugins/minigames/memory/card.tscn" type="PackedScene" id=1]
[ext_resource path="res://plugins/minigames/memory/player.gd" type="Script" id=2]
[ext_resource path="res://plugins/minigames/memory/minigame.gd" type="Script" id=3]
[ext_resource path="res://scenes/overlays/score_overlay.tscn" type="PackedScene" id=4]
[ext_resource path="res://plugins/minigames/memory/84322__splashdust__flipcard.wav" type="AudioStream" id=5]
[ext_resource path="res://plugins/minigames/memory/montage.ogg" type="AudioStream" id=6]
[ext_resource path="res://plugins/minigames/memory/342751__rhodesmas__coins-purchase-3.wav" type="AudioStream" id=7]

[node name="Spatial" type="Spatial"]
script = ExtResource( 3 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 20, 0 )

[node name="Player1" type="Spatial" parent="."]
script = ExtResource( 2 )
ally = NodePath("../Player2")

[node name="Flip" type="AudioStreamPlayer" parent="Player1"]
stream = ExtResource( 5 )

[node name="Point" type="AudioStreamPlayer" parent="Player1"]
stream = ExtResource( 7 )

[node name="Player2" type="Spatial" parent="."]
script = ExtResource( 2 )
column = 7
ally = NodePath("../Player1")

[node name="Flip" type="AudioStreamPlayer" parent="Player2"]
stream = ExtResource( 5 )
bus = "Effects"

[node name="Point" type="AudioStreamPlayer" parent="Player2"]
stream = ExtResource( 7 )
bus = "Effects"

[node name="Player3" type="Spatial" parent="."]
script = ExtResource( 2 )
row = 4
ally = NodePath("../Player4")

[node name="Flip" type="AudioStreamPlayer" parent="Player3"]
stream = ExtResource( 5 )
bus = "Effects"

[node name="Point" type="AudioStreamPlayer" parent="Player3"]
stream = ExtResource( 7 )
bus = "Effects"

[node name="Player4" type="Spatial" parent="."]
script = ExtResource( 2 )
row = 4
column = 7
ally = NodePath("../Player3")

[node name="Flip" type="AudioStreamPlayer" parent="Player4"]
stream = ExtResource( 5 )
bus = "Effects"

[node name="Point" type="AudioStreamPlayer" parent="Player4"]
stream = ExtResource( 7 )
bus = "Effects"

[node name="Row1" type="Spatial" parent="."]

[node name="1" parent="Row1" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.5, 0, -8 )

[node name="2" parent="Row1" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0, -8 )

[node name="3" parent="Row1" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 0, -8 )

[node name="5" parent="Row1" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 0, -8 )

[node name="6" parent="Row1" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, -8 )

[node name="7" parent="Row1" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.5, 0, -8 )

[node name="Row2" type="Spatial" parent="."]

[node name="1" parent="Row2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.5, 0, -3 )

[node name="2" parent="Row2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0, -3 )

[node name="3" parent="Row2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 0, -3 )

[node name="5" parent="Row2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 0, -3 )

[node name="6" parent="Row2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, -3 )

[node name="7" parent="Row2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.5, 0, -3 )

[node name="Row3" type="Spatial" parent="."]

[node name="1" parent="Row3" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.5, 0, 2 )

[node name="2" parent="Row3" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0, 2 )

[node name="3" parent="Row3" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 0, 2 )

[node name="5" parent="Row3" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 0, 2 )

[node name="6" parent="Row3" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 2 )

[node name="7" parent="Row3" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.5, 0, 2 )

[node name="Row4" type="Spatial" parent="."]

[node name="1" parent="Row4" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.5, 0, 7 )

[node name="2" parent="Row4" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0, 7 )

[node name="3" parent="Row4" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 0, 7 )

[node name="5" parent="Row4" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 0, 7 )

[node name="6" parent="Row4" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 7 )

[node name="7" parent="Row4" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.5, 0, 7 )

[node name="ScoreOverlay" parent="." instance=ExtResource( 4 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0
autoplay = true
bus = "Music"
